--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -1,7 +1,7 @@
 {% extends "app/base.html" %}
 {% load static %}
 {% block search %}
-  <h5>Ket qua tim kiem {{searched}}</h5>
+  <h5>Kết quả tìm kiếm {{searched}}</h5>
   <br/>
   <div class="row" style="width:100%">
       {%for product in keys%}
