--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,58 +1,60 @@
 {% extends "app/base.html" %}
 {% load static %}
 {% block login %}
-<section class="vh-100" style="background-color: #eee;">
-  <div class="container h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-lg-12 col-xl-11">
-        <div class="card text-black" style="border-radius: 25px;">
-          <div class="card-body p-md-5">
-            <div class="row justify-content-center">
-              <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+<section class="py-5" style="background-color: #f8f9fa;">
+  <div class="container">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-lg-8">
+        <div class="card shadow border-0 rounded-4">
+          <div class="row g-0">
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login</p>
+            <!-- Form đăng nhập -->
+            <div class="col-md-6 p-5">
+              <h3 class="fw-bold text-center mb-4">Đăng nhập</h3>
 
-                <form class="mx-1 mx-md-4" method="POST" action="">
-                  {% csrf_token %}
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                    <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                      <input type="text" name="username" id="form3Example1c" class="form-control" />
-                      <label class="form-label" for="form3Example1c">User Name</label>
-                    </div>
-                  </div>
+              <form method="POST" action="">
+                {% csrf_token %}
 
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                    <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                      <input type="text" name="password" id="form3Example1c" class="form-control" />
-                      <label class="form-label" for="form3Example4c">Password</label>
-                    </div>
-                  </div>
+                <div class="form-floating mb-3">
+                  <input type="text" name="username" class="form-control" id="username">
+                  <label for="username"><i class="bi bi-person-fill me-2"></i>Tên đăng nhập</label>
+                </div>
 
-                  <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button  type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg">Login</button>
-                  </div>
-                  <p class="text-center h6 fw-bold mb-5 mx-1 mx-md-4 mt-4">You don't have a acount?<a href="{% url "register" %}">register</a></p>
-                  {% for message in messages %}
-                  <p id="message" class="text-center h6 fw-bold mb-5 mx-1 mx-md-4 mt-4">{{message}}</p>
-                  {%endfor%}
-                </form>
+                <div class="form-floating mb-4">
+                  <input type="password" name="password" class="form-control" id="password">
+                  <label for="password"><i class="bi bi-lock-fill me-2"></i>Mật khẩu</label>
+                </div>
 
-              </div>
-              <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                {% for message in messages %}
+                <div class="alert alert-warning text-center py-2">{{ message }}</div>
+                {% endfor %}
 
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                  class="img-fluid" alt="Sample image">
+                <div class="d-grid mb-3">
+                  <button type="submit" class="btn btn-primary btn-lg rounded-pill shadow-sm">
+                    <i class="bi bi-box-arrow-in-right me-2"></i>Đăng nhập
+                  </button>
+                </div>
 
-              </div>
+                <p class="text-center mb-0">
+                  Bạn chưa có tài khoản?
+                  <a href="{% url 'register' %}" class="fw-bold text-decoration-none">Đăng ký</a>
+                </p>
+              </form>
             </div>
+
+            <!-- Ảnh minh họa -->
+            <div class="col-md-6 d-none d-md-block">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                alt="Login" class="img-fluid h-100 rounded-end-4" style="object-fit: cover;">
+            </div>
+
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 {% endblock login %}
 
 
