--- a/app/templates/app/category.html
+++ b/app/templates/app/category.html
@@ -1,5 +1,6 @@
 {% extends "app/base.html" %}
 {% load static %}
+{% load humanize %}
 {% block category %}
   <br/>
   <div class="row" style="width:100%">
