--- a/app/templates/app/order_success.html
+++ b/app/templates/app/order_success.html
@@ -1,5 +1,6 @@
 {% extends 'app/base.html' %}
 {% load static %}
+{% load humanize %}
 {% block order_success %}
 <style>
     /* Định dạng chung */
