--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         {% comment %} css {% endcomment %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
         <link href="{% static 'app/css/style.css' %}" rel="stylesheet" />
         <link href="{% static 'app/css/style1.css' %}" rel="stylesheet" />
         <link href="{% static 'app/css/owl.carousel.min.css' %}" rel="stylesheet" />
@@ -210,5 +211,27 @@
         </footer>
 
         <script src="{% static 'app/js/cart.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+        <script>
+          document.addEventListener('DOMContentLoaded', function () {
+            new Splide('#productSplide', {
+              type      : 'loop',      // Cho phép quay vòng
+              perPage    : 5,          // Số sản phẩm hiển thị cùng lúc
+              perMove    : 1,          // Trượt từng sản phẩm
+              gap        : '1rem',     // Khoảng cách giữa các sản phẩm
+              pagination: false,
+              arrows: true,    
+              autoplay   : true,       // Tự động chạy
+              interval   : 2000,       // 3 giây trượt 1 lần
+              pauseOnHover: false,     
+              breakpoints: {
+                1200: { perPage: 4 },
+                992: { perPage: 3 },
+                768: { perPage: 2 },
+                576: { perPage: 1 }
+              }
+            }).mount();
+          });
+        </script>
     </body>
 </html>
