--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -1,5 +1,6 @@
 {% extends 'app/base.html' %}
 {% load static %}
+{% load humanize %}
 {% block cart_content %}
 <div class="row" style="width:100%">
 	<div class="col-lg-12">
