--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -1,5 +1,6 @@
 {% extends "app/base.html" %}
 {% load static %}
+{% load humanize %}
 {% block search %}
   <h5>Kết quả tìm kiếm {{searched}}</h5>
   <br/>
