--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -77,13 +77,13 @@
                 </ul>
                 <form class="d-flex" role="search" method="POST" action="{% url 'search' %}">
                   {% csrf_token %}
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searched">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search" name="searched">
+                  <button class="btn btn-outline-success" type="submit">Tìm kiếm</button>
                 </form>
               </div>
                 <div class="nav-item" style = "visibility: {{user_login}}">
-                  <span>Hello, {{request.user}}</span>
-                  <span><a href="{% url 'logout' %}">Logout</a></span>
+                  <span>Xin chào, {{request.user}}</span>
+                  <span><a href="{% url 'logout' %}">Đăng xuất</a></span>
                 </div>
 
                 <div class="nav-item" style = "visibility: {{user_not_login}}">
