--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -4,15 +4,15 @@
 <div class="row" style="width:100%">
 	<div class="col-lg-12">
 		<div class="box-element">
-			<a  class="btn btn-outline-dark" href="{% url 'home' %}">&#x2190; Continue Shopping</a>
+			<a  class="btn btn-outline-dark" href="{% url 'home' %}">&#x2190; Tiếp tục mua sắm</a>
 			<br>
 			<br>
 			<table class="table">
 				<tr>
-					<th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
-					<th><h5>Total: <strong>{{order.get_cart_total}} VND</strong></h5></th>
+					<th><h5>Số lượng: <strong>{{order.get_cart_items}}</strong></h5></th>
+					<th><h5>Tổng tiền: <strong>{{order.get_cart_total}} VND</strong></h5></th>
 					<th>
-						<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Checkout</a>
+						<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Mua hàng</a>
 					</th>
 				</tr>
 			</table>
@@ -21,10 +21,10 @@
 		<div class="box-element">
 			<div class="cart-row">
 				<div style="flex:2"></div>
-				<div style="flex:2"><strong>Item</strong></div>
-				<div style="flex:1"><strong>Price</strong></div>
-				<div style="flex:1"><strong>Quantity</strong></div>
-				<div style="flex:1"><strong>Total</strong></div>
+				<div style="flex:2"><strong>Thông tin</strong></div>
+				<div style="flex:1"><strong>Giá</strong></div>
+				<div style="flex:1"><strong>Số lượng</strong></div>
+				<div style="flex:1"><strong>Tổng tiền</strong></div>
 			</div>
 			
 			{% for item in items %}
