Chỉnh sửa giao diện home.html

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -126,7 +126,7 @@
             <img src="{{ product.ImageURL }}" class="card-img-top" alt="{{ product.name }}" style="height: 240px; object-fit: contain;">
             <div class="card-body">
               <h6 class="card-title">{{ product.name }}</h6>
-              <p class="card-text text-danger fw-bold">{{ product.price|floatformat:0|intcomma }}₫</p>
+              <p class="card-text text-danger fw-bold">{{ product.price|floatformat:0|intcomma }} VND</p>
             </div>
           </a>
         </div>
